--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
     "express": "^4.17.2",
+    "mysql": "^2.18.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
