--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.19.3",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
+    "node-data-validator": "^1.1.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
